--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Browser Phasmophobia</title>
+    <title>Browser Phasmophobia Alpha</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<!-- UI Overlay -->
 <div id="ui">
     <div id="sanity">Sanity: 100%</div>
     <div id="equipment">Equipment: EMF</div>
@@ -29,11 +30,11 @@
     </div>
 </div>
 
+<!-- Crosshair -->
 <div id="crosshair">+</div>
 
-<script src="https://cdn.jsdelivr.net/npm/three@0.158/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.158/examples/jsm/controls/PointerLockControls.js"></script>
-<script src="script.js"></script>
+<!-- Load your script as an ES module -->
+<script type="module" src="script.js"></script>
 
 </body>
 </html>
